2003-03-06    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's suppress patch
	* Added evdev.c to project, contains Jonathan Paisley's oops patch
	* Added input.c to project

2003-02-23    John E. Joganic <john@joganic.com>

	* Added xidump and gtk config options

2003-02-22    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's multi-monitor patch
	* Added build option for Xfree86 v3.x; testing only
	* Applied Jimmy Yen's origin patch

2003-02-12    John E. Joganic <john@joganic.com>

	* Applied Ping Cheng's eraser patch for PL in wacom.c
	* Applied Ping Cheng's USB patch for xf86Wacom.c
	* Applied Ping Cheng's device_on patch for xf86Wacom.c

2003-01-31    John E. Joganic <john@joganic.com>

	* Branched 0.4.0 production.  Updated version to 0.5.0-beta.
	* Added Ping Cheng's PL code.
	* Fixed serial number code in wacom.c, xf86Wacom.c, and wacserial.c such
	  that they all correspond.

2003-01-27    John E. Joganic <john@joganic.com>

	* Changed macros from WAC_ to WCM_ due to bug in Mandrake 9 autoconf.
	* Added timeout for reset and tablet detection in wacserial.c
	* Added logging to wacdump.
	* Added serial reset on bit errors.

2003-01-26    John E. Joganic <john@joganic.com>

	* Merged Dean Townsley's Acer C100 patch
	* Changed internal device identification model to handle new tablets

2003-01-25    John E. Joganic <john@joganic.com>

	* Added configuration option to disable non-linux code
	* Moved USB code from wacdump into wacusb.c

2003-01-16    John E. Joganic <john@joganic.com>

	* Added check for Mandrake .o.gz modules in configure

2003-01-10    John E. Joganic <john@joganic.com>

	* Changed bit macros for Graphire

2003-01-09    John E. Joganic <john@joganic.com>

	* Fixed Intuos and Intuos2 sizes
	* Added Gilbert Ramirez's no-merge-constants patch
	* Added patch for HID_QUIRK on 2.4.18

2003-01-01    John E. Joganic <john@joganic.com>

	* Added volito to hid-core.c.
	* Fixed volito report #99.
	* Updated volito ranges.