@@ -5,6 +5,7 @@ AM_CFLAGS = -Wall
 
 EXTRA_PROGRAMS = wacdump xidump
 EXTRA_SCRIPTS = wacom.o hid.o usbmouse.o evdev.o input.o \
+		tabletdev.o \
 		wacom_drv.o wacom_drv-v3.o
 
 wacdump_SOURCES = wacdump.c wacscrn.c wacscrn.h \
@@ -16,6 +17,7 @@ xidump_SOURCES = xidump.c
 
 wacdump_LDADD = -lncurses
 EXTRA_DIST = wacom.c hid-core.c hid-input.c hiddev.c evdev.c input.o \
+		tabletdev.o \
 		xf86Wacom.c usbmouse.c \
 		wcm-beta.c wcm-beta.h
 
@@ -71,6 +73,10 @@ evdev.o: evdev.c Makefile
 input.o: input.c Makefile
 	gcc -I$(KERNEL_DIR)/include $(KCFLAGS) \
 		-DKBUILD_BASENAME=input -c -o input.o input.c
+
+tabletdev.o: tabletdev.c Makefile
+	gcc -I$(KERNEL_DIR)/include $(KCFLAGS) \
+		-DKBUILD_BASENAME=tabletdev -c -o tabletdev.o tabletdev.c
 
 xf86Wacom.o: xf86Wacom.c wcm-beta.h Makefile
 	gcc -O2 -march=i386 -mcpu=$(ARCHITECTURE) -pipe -ansi \
